[build-system]
requires = [
    "setuptools",
    "wheel",
]

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "transitive_optional_dependency"
dynamic = ["version"]
dependencies = [
    "transformers[torch] @ git+https://github.com/huggingface/transformers@1f33023cfa998c237372baff36b166c014f33405#egg=transformers",
]
